fixed position for notification badge on mobile

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -66,4 +66,9 @@ img {
   ::ng-deep .mat-icon {
     font-size: 30px;
   }
+
+  ::ng-deep .mat-badge-content {
+    margin-top: 6px;
+    right: -6px !important;
+    }
 }
